Very nearly there now for POC 0.01 full functionality.
TODO:
-- Session flash messages
-- Allow the user the choose the best answer every n questions
-- Session management??? (e.g. session as user stand-in)
-- Finally: Rewrite front-end for AngularJS

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -29,6 +29,7 @@
 //
 // etc.
 
-@import 'variables/colours-high.less';
+@import 'reset.less';
+@import 'variables/colours-low.less';
 @import 'variables/typeface.less';
 @import 'pages/homepage.less';
