--- a/assets/styles/pages/homepage.less
+++ b/assets/styles/pages/homepage.less
@@ -8,6 +8,10 @@ h2 {
 h3 {
 	font-size: 32pt;
 }
+h4 {
+	font-size: 28pt;
+	font-style: italic;
+}
 
 #main {
 	width: 50%;
@@ -18,4 +22,18 @@ input {
 	width: 100%;
 	font-size: 22pt;
 	margin-top: 20px;
+}
+
+.possible_answer {
+  display: flex;
+  align-items: center;
+  input {
+    width: 10%;
+    margin-top: 10px;
+  }
+  label {
+    width: 90%;
+    padding: 2px;
+    font-size: 22pt;
+  }
 }
