Minor cosmetic improvements

--- a/assets/styles/pages/homepage.less
+++ b/assets/styles/pages/homepage.less
@@ -4,6 +4,7 @@ h1 {
 h2 {
 	font-size: 36pt;
 	font-style: italic;
+	margin-bottom: 20px;
 }
 h3 {
 	font-size: 32pt;
@@ -18,10 +19,16 @@ h4 {
 	margin: 100px auto 100px auto;
 }
 
-input {
+input, textarea {
 	width: 100%;
 	font-size: 22pt;
 	margin-top: 20px;
+	padding: 5px;
+	height: 10px;
+}
+
+textarea {
+	overflow: hidden;
 }
 
 .possible_answer {
