--- a/assets/styles/variables/typeface.less
+++ b/assets/styles/variables/typeface.less
@@ -1,6 +1,6 @@
 // http://www.google.com/fonts#UsePlace:use/Collection:Source+Sans+Pro
 
-body {
+body, textarea {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
