--- a/views/layouts/splash.jade
+++ b/views/layouts/splash.jade
@@ -9,6 +9,9 @@ html(lang='en')
     <!--STYLES END-->
     <!--SCRIPTS-->
     block scripts
+      script(type='text/javascript' src='http://code.jquery.com/jquery.min.js')
+      script(type='text/javascript' src='/js/dependencies/ExpandingTextareas/expanding.js')
+      script(type='text/javascript' src='/js/forms.js')
     <!--SCRIPTS END-->
     title #{title} | Questions Against Humanity
   body
