--- a/views/pages/homepage.jade
+++ b/views/pages/homepage.jade
@@ -9,4 +9,4 @@ block content
       h2 (Make sure it's funny.)
       include ../includes/sessionflash.jade
       form(action='/questions/ask',method='post')
-        input(name='wording', id='question', type='text', placeholder='e.g., #{example_question}')
+        textarea(name='wording', id='question', placeholder='e.g., "#{example_question}"' class="expanding")
