About to start work on frontend

--- a/views/includes/sessionflash.jade
+++ b/views/includes/sessionflash.jade
@@ -2,10 +2,10 @@ if messages
   ul
   if messages.notify
     each message in messages.notify
-      li= message
+      li!= message
   if messages.warning
     each message in messages.warning
-      li= message
+      li!= message
   if messages.error
     each message in messages.error
-      li= message
+      li!= message
